# MyGCCProj

./: .gitignore  .gitmodules  MDRSplitter.c  Makefile  Makefile.am  Reflow.c  adts_cutter.c  ffmpeg_lagarith.7z  flac_tag_extract.c  glcapture.c  json_test.c  my_math.h  prime_decmp.c  regist_conv.c
ESEQPlayer/: ESEQPlayer.c  Makefile  linux.c  windows.c
Electone/: Makefile  linux.c
FlacTagger/: Makefile  flac_tagger.c  flac_tagger.rc
MIDI_IN/: Makefile  linux.c
YOGP_DSF/: Register.cpp  Resources.txt  Window.cpp  YOGP_DSF.cpp  YOGP_DSF.def  YOGP_DSF.h  YOGP_DSF.sln  YOGP_DSF.vcproj  YOGP_DSF.vcxproj  YOGP_DSF.vcxproj.filters  dxcapture.cpp  hdc_capture.cpp  resize.c  simple_operation.cpp
bgm_player/: Makefile  Makefile.am  alsa.c  buffer.c  build.sh  configure.ac  cue.c  flac.c  flv1.c  flv_core_le64.c  fsutil.c  fsutil.h  list.h  main.c  main.h  mmdev.c  mp4.c  playback.c  playlist.c  riff.c  stdio.c
bgm_player/src/: Makefile.am  buffer.c  cue.c  flac.c  main.c  playback.c  playlist.c  riff.c  stdio.c
ddns/: cl.c  sock_utl.c  sv.c
ffmpeg_lagarith/: lagarith_enc.c  patch.diff
gl_capture/: Makefile  apih.c  avi.c  avi.h  coreaudio.c  dbg.c  dbg.h  dlli.c  dump.c  hook.c  hook.h  hook_d3d9.c  hook_ogl.c  injector.c  main.c  main.h  vfw.c  vfw.h
niconama/: Makefile  a.out  configure.ac  editstream  guis  threads  urls.txt  xmls
niconama/common/: Makefile  _alert.c  _comment.c  _lame.c  _x264.c  common.h  cookie.c  cookie.h  coreaudio.cpp  coreaudio.h  data_exchange.c  data_exchange.h  dl.c  editstream.c  fdk-aac.c  fdk-aac.h  fixedhn.c  fixedhn.h  getplayerstatus.c  getpublishstatus.c  getthreads.c  gui_var.c  hdc_capture.c  hdc_capture.h  main.c  main.h  n_sock.c  n_sock.h  n_socket.c  options.h  reformat.h  resample.h  rtmp.c  rtmp.h  x264.c  x264.h  xml.c  xml.h  xml_struct.h
niconama/plan/: apis  editstream  guis  niconama
niconama/un/: alert.c  comment.c  cookie.c  getCookie.c  getplayerstatus.c  getpublishstatus.c  gui.c  gui.h  gui_var.c  main.c  main.h  xml.c  xml.h  xml_struct.h
niconama_alert/: Makefile  linux.c
src/: MDRSplitter.c  Makefile  aes256.c  dummy.c  flv_analyze.c  flv_core.h  flv_core_le64.c  flv_cutter.c  flv_fps_check.c  flv_norm.c  flv_norm.rc  wol.c  x11resize.c
template/: Makefile  win_gui.c  win_gui.rc
uosu/: Makefile  bezier.c  build.sh  catmull.c  curve.h  fsutil.c  gl3.h  glmain.c  hotex.c  linear.c  main.c  mp3.c  osu.c  osu.h  pass.c  play.c  png.c  polygon.c  ppush.c  thread.h  unif.c
x264Output/: Makefile  output.h  resource.h  x264_output.c  x264_output.def  x264_output.rc
