bin_PROGRAMS=Nico_cross_streamer
Nico_cross_streamer_SOURCES=common/coreaudio.cpp \
							common/cookie.c \
							common/data_exchange.c \
							common/fdk-aac.c \
							common/getplayerstatus.c \
							common/getpublishstatus.c \
							common/gui_var.c \
							common/main.c \
							common/rtmp.c \
							common/xml.c \
							common/cookie.h \
							common/coreaudio.h \
							common/data_exchange.h \
							common/fdk-aac.h \
							common/main.h \
							common/options.h \
							common/rtmp.h \
							common/xml.h \
							common/xml_struct.h
Nico_cross_streamer_CPPFLAGS=$(MAIN_CFLAGS)
Nico_cross_streamer_LDADD=$(MAIN_LIBS) $(WIN_LIBS)
Nico_cross_streamer_LDFLAGS=-s
